--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.1
+Date: 04.08.2019
+  Fixes:
+    - Ghost Entities are working correctly now
+    - Blueprinting Voidpipes works now
+  Changes:
+    - GUI is now under GUILeft
+    - No on_tick anymore, but still removes Fluids!
+---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 17.06.2019
   Changes:
