--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.3
+Date: 01.02.2020
+  Fixes:
+    - Fixed the Crash with Factorissimo 2
+---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 24.01.2020
   Changes:
