--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.5
+Date: 22.11.2020
+  Bugfixes:
+    - Fixed crash with styles
+---------------------------------------------------------------------------------------------------
+Version: 0.2.4
+Date: 11.06.2020
+  Bugfixes:
+    - Fixed crash with styles
+---------------------------------------------------------------------------------------------------
 Version: 0.2.3
 Date: 01.02.2020
-  Fixes:
+  Bugfixes:
     - Fixed the Crash with Factorissimo 2
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
@@ -11,7 +21,7 @@ Date: 24.01.2020
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 04.08.2019
-  Fixes:
+  Bugfixes:
     - Ghost Entities are working correctly now
     - Blueprinting Voidpipes works now
   Changes:
@@ -23,7 +33,7 @@ Date: 17.06.2019
   Changes:
     - Code cleanup
     - better Script
-  Updates:
+  Features:
     - Updated to Version 17
 ---------------------------------------------------------------------------------------------------
 Older Versions:
