--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.6
+Date: 24.11.2020
+  Changes:
+    - Update to 1.1
+---------------------------------------------------------------------------------------------------
 Version: 0.2.5
 Date: 22.11.2020
   Bugfixes:
@@ -36,10 +41,17 @@ Date: 17.06.2019
   Features:
     - Updated to Version 17
 ---------------------------------------------------------------------------------------------------
-Older Versions:
-  Version: 0.1.2
+Version: 0.1.2
+Date: ???
+  Changes:
     - Now Blueprintable
-  Version: 0.1.1
+---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: ???
+  Bugfixes:
     - Fixed a Code Fail
-  Version: 0.1.0
+---------------------------------------------------------------------------------------------------
+Version: 0.1.0
+Date: ???
+  Features:
     - Release
